--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,9 @@ services:
     # command:
     #  - "--config=/app/config.yaml"
     ##############################################
+    restart: always
     ports:
-      - "4000:4000" # Map the container port to the host, change the host port if necessary
+      - "172.17.0.1:4000:4000" # Map the container port to the host, change the host port if necessary
     environment:
         DATABASE_URL: "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
         STORE_MODEL_IN_DB: "True" # allows adding models to proxy via UI
@@ -40,7 +41,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data  # Persists Postgres data across container restarts
+      - ../litellm-volumes/postgres_data:/var/lib/postgresql/data  # Added this volume mount
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d litellm -U llmproxy"]
       interval: 1s
@@ -63,6 +64,3 @@ services:
 volumes:
   prometheus_data:
     driver: local
-  postgres_data:
-    name: litellm_postgres_data  # Named volume for Postgres data persistence
-
